2011-02-21  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.2.1

2011-02-19  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.2.1b1

	* iTunesTrack.[hm]: added -genre and -grouping as properties for
	  formatting tracks on user request

	* English.lproj/{AlbumsTrackFormat.txt, PlaylistsTrackFormat.txt}:
	  documented %(genre) and %(grouping)

	* README-GNUstep: updated

2011-02-18  Marcus Mueller  <znek@mulle-kybernetik.com>

	* iTunesFSFormatter.m: set formatter behaviour explicitly to 10.0

	* PlaylistsTrackFormat.txt: fixed a typo

2011-02-16  Marcus Mueller  <znek@mulle-kybernetik.com>

	* iTunesFileSystem.m: volname is a MacFUSE-only option

	* iTunesFSFormatter.m: removed old workaround for GNUstep, but there
	  are still problems (see README-GNUstep)

	* README-GNUstep: updated

2011-02-14  Marcus Mueller  <znek@mulle-kybernetik.com>

	* README-GNUstep: updated

	* COPYING, COPYRIGHT: it's 2011 by now

	* GNUmakefile: added main.m

	* iTunesFileSystem.m: properly implemented -needsLocalOption for
	  GNUstep

	* English.lproj/MainMenu.gorm: changed application delegate to
	  FUSEOFSAppController

	* iTunesFSInfo.plist: added new defaults for GNUstep

2011-02-07  Marcus Mueller  <znek@mulle-kybernetik.com>

	* iTunesLibrary.m: fixed a leak

	* iPodLibrary.m: fixed format strings

	* iTunesFormatFile.m: fixed format strings and conditional
	  expression

2011-02-06  Marcus Mueller  <znek@mulle-kybernetik.com>

	* GNUmakefile*, *.[hm]: ported to GNUstep

	* Info.plist: it's 2011 by now

	* iTunesFileSystem.m: fixed an uninitialized variable access

2011-01-29  Marcus Mueller  <znek@mulle-kybernetik.com>

	* iTunesFSController.[hm]: removed. Added a new FUSEOFSAppController
	  in FUSEOFS which does everything iTunesFS requires in a more
	  abstracted manner.

	* Info.plist: added new "FUSEObjectFileSystemClass" user default
	  for FUSEOFSAppController.

2011-01-26  Marcus Mueller  <znek@mulle-kybernetik.com>
